@@ -161,3 +161,6 @@ SQLPreferencesPanel.reload.sql.contents=Reload last SQL editor contents when Ses
 
 
 preferences.dont.change.locale=Don't change
+
+
+SQLPreferencesPanel.MaxTextOutputColumnWidthPanel.label=Maximum column length in text outputs (Minimum value is {0}):
